--- a/EducationSearching/Web.config
+++ b/EducationSearching/Web.config
@@ -9,8 +9,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="ConnectionDate" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DB_date;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\DB_date.mdf" providerName="System.Data.SqlClient" />
+    <!--<add name="ConnectionDate" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DB_date;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\DB_date.mdf" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\DB_accounts.mdf;Initial Catalog=DB_accounts;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+  <!--"data source=.\\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
