--- a/EducationSearching/Web.config
+++ b/EducationSearching/Web.config
@@ -13,6 +13,9 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\DB_accounts.mdf;Initial Catalog=DB_accounts;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   <!--"data source=.\\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"-->
   </connectionStrings>
+
+  
+  
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -72,7 +75,13 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+      <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+   -->
+      <clear/>
+      <add name="AspNetSqlProfileProvider"
+      connectionStringName="DefaultConnection"
+      applicationName="/"
+      type="System.Web.Profile.SqlProfileProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+   </providers>
   </entityFramework>
 </configuration>
